--- a/src/app/views/spoti-app/spoti-app.component.html
+++ b/src/app/views/spoti-app/spoti-app.component.html
@@ -1,3 +1,7 @@
-<p>
-  spoti-app works!
-</p>
+<div class="containerSpotiApp">
+  <ap-nav-bar-spoti></ap-nav-bar-spoti>
+  <div class="container">
+     <router-outlet></router-outlet>
+  </div>
+
+</div>
