--- a/src/app/views/spoti-app/home-spoti/home-spoti.component.html
+++ b/src/app/views/spoti-app/home-spoti/home-spoti.component.html
@@ -1,4 +1,1 @@
-<p *ngFor="let eleme of elementos">
-  {{eleme.name}}
-  <img [src]="eleme.flag" style="width: 300px" alt="">
-</p>
+{{ elementos | json}}
